website/code/fasta-gcj.log
BUILD COMMANDS FOR: fasta.gcj

Sun Jul  3 00:40:42 PDT 2005

/usr/bin/gcj-3.4 -O3 -fomit-frame-pointer -funroll-loops -o fasta.gcj_run --main=fasta fasta.java
fasta.java:1: error: Class or interface declaration expected.
   EMPTY 
   ^
1 error
make[1]: [fasta.gcj_run] Error 1 (ignored)
rm fasta.java

=================================================================
COMMAND LINE (%A is single numeric argument):

fasta.gcj_run %A
Error, could not exec fasta.gcj_run 25000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/fasta:/opt/shootout/shootout/bench/fasta/tmp:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
